tests/js_error/source_locations/expression/assign_op/get_private_property.exp
Error: 
  ┌ tests/js_error/source_locations/expression/assign_op/get_private_property.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at get #foo (tests/js_error/source_locations/expression/assign_op/get_private_property.js:3:11)
  at test (tests/js_error/source_locations/expression/assign_op/get_private_property.js:7:9)
  at <global> (tests/js_error/source_locations/expression/assign_op/get_private_property.js:12:1)